--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
 
         <div class="project-item">
           <div class="project-image">
-            <img src="images/personal.webp" alt="Project 2">
+            <img src="personal.webp" alt="Project 2">
           </div>
           <div class="project-info">
             <h3>Personal Website</h3>
@@ -528,7 +528,7 @@
 
         <div class="project-item">
           <div class="project-image">
-            <img src="images/dcreport.webp" alt="Project 3">
+            <img src="dcreport.webp" alt="Project 3">
           </div>
           <div class="project-info">
             <h3>Report System</h3>
@@ -664,3 +664,4 @@
 
 </body>
 </html>
+
