--- a/index.html
+++ b/index.html
@@ -564,9 +564,9 @@
           </div>
 
           <div class="contact-item">
-            <div class="contact-icon"><i class="fas fa-phone"></i></div>
+            <div class="contact-icon"><i class="fas fa-discord"></i></div>
             <div>
-              <h3>Phone</h3>
+              <h3>Discord</h3>
               <p>+92 333 9854725</p>
             </div>
           </div>
@@ -664,4 +664,5 @@
 
 </body>
 </html>
+
 
