--- a/index.html
+++ b/index.html
@@ -564,10 +564,10 @@
           </div>
 
           <div class="contact-item">
-            <div class="contact-icon"><i class="fas fa-discord"></i></div>
+            <div class="contact-icon"><i class="fa-discord"></i></div>
             <div>
               <h3>Discord</h3>
-              <p>+92 333 9854725</p>
+              <p>@kenjiro_ito</p>
             </div>
           </div>
         </div>
@@ -664,5 +664,6 @@
 
 </body>
 </html>
+
 
 
