--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
           </div>
 
           <div class="contact-item">
-            <div class="contact-icon"><i class="fa-discord"></i></div>
+            <div class="contact-icon"><i class="fa-brands fa-discord" style="color: #ffffff;"></i></div>
             <div>
               <h3>Discord</h3>
               <p>@kenjiro_ito</p>
@@ -664,6 +664,7 @@
 
 </body>
 </html>
+
 
 
 
